--- a/app/src/main/res/layout/view_bottom_navigation.xml
+++ b/app/src/main/res/layout/view_bottom_navigation.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_F1F7FE"
     android:orientation="vertical"
     tools:ignore="SpUsage">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_top_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/color_212223_F1F7FE">
 
         <TextView
             android:id="@+id/txv_partner"
@@ -21,7 +21,7 @@
             android:includeFontPadding="false"
             android:text="@string/official_partner"
             android:textAllCaps="true"
-            android:textColor="@color/color_909090_666666"
+            android:textColor="@color/color_BCBCBC_666666"
             android:textSize="@dimen/textSize10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,10 +41,10 @@
             android:id="@+id/txv_other"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:includeFontPadding="false"
             android:paddingVertical="12dp"
+            android:paddingStart="16dp"
             android:text="@string/other_link"
             android:textColor="@color/color_BBBBBB_333333"
             android:textSize="@dimen/textSize12sp"
@@ -64,19 +64,18 @@
             android:id="@+id/line_other"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:background="@color/color_1F1F1F_e6e6e6"
+            android:background="@color/color_3b3b3b_e6e6e6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/txv_other"
             app:layout_constraintTop_toBottomOf="@+id/txv_other" />
 
         <LinearLayout
             android:id="@+id/ll_other"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingVertical="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/txv_other"
+            android:paddingStart="16dp"
             app:layout_constraintTop_toBottomOf="@+id/line_other">
 
             <TextView
@@ -86,7 +85,7 @@
                 android:includeFontPadding="false"
                 android:paddingBottom="18dp"
                 android:text="@string/about_us"
-                android:textColor="@color/color_7F7F7F_999999"
+                android:textColor="@color/color_8F8F8F_999999"
                 android:textSize="@dimen/textSize12sp" />
 
             <TextView
@@ -96,7 +95,7 @@
                 android:includeFontPadding="false"
                 android:paddingBottom="18dp"
                 android:text="@string/responsible"
-                android:textColor="@color/color_7F7F7F_999999"
+                android:textColor="@color/color_8F8F8F_999999"
                 android:textSize="@dimen/textSize12sp" />
 
             <TextView
@@ -106,7 +105,7 @@
                 android:includeFontPadding="false"
                 android:paddingBottom="18dp"
                 android:text="@string/terms_conditions"
-                android:textColor="@color/color_7F7F7F_999999"
+                android:textColor="@color/color_8F8F8F_999999"
                 android:textSize="@dimen/textSize12sp" />
 
             <TextView
@@ -115,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
                 android:text="@string/privacy_policy"
-                android:textColor="@color/color_7F7F7F_999999"
+                android:textColor="@color/color_8F8F8F_999999"
                 android:textSize="@dimen/textSize12sp" />
 
             <!-- 20220719 新版Footer隱藏代理加盟 -->
@@ -135,10 +134,10 @@
             android:id="@+id/txv_help"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="1dp"
             android:includeFontPadding="false"
             android:paddingVertical="12dp"
+            android:paddingStart="16dp"
             android:text="@string/help"
             android:textColor="@color/color_BBBBBB_333333"
             android:textSize="@dimen/textSize12sp"
@@ -160,20 +159,19 @@
             android:id="@+id/line_help"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:background="@color/color_1F1F1F_e6e6e6"
+            android:background="@color/color_3b3b3b_e6e6e6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/txv_help"
             app:layout_constraintTop_toBottomOf="@+id/txv_help" />
 
         <LinearLayout
             android:id="@+id/ll_help"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingVertical="10dp"
+            android:paddingStart="16dp"
             android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/txv_help"
             app:layout_constraintTop_toBottomOf="@+id/line_help"
             tools:visibility="visible">
 
@@ -219,10 +217,10 @@
             android:id="@+id/ll_language"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:paddingVertical="12dp"
+            android:paddingStart="16dp"
             app:layout_constraintTop_toBottomOf="@+id/ll_help">
 
             <TextView
@@ -246,7 +244,7 @@
             android:id="@+id/line_language"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:background="@color/color_1F1F1F_e6e6e6"
+            android:background="@color/color_3b3b3b_e6e6e6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/ll_language"
             app:layout_constraintTop_toBottomOf="@+id/ll_language" />
@@ -258,6 +256,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:background="@color/color_242527_F1F7FE"
         android:orientation="vertical"
         tools:visibility="visible">
 
@@ -271,7 +270,7 @@
             android:includeFontPadding="false"
             android:lineSpacingExtra="4dp"
             android:text="@string/btm_navigation_hint"
-            android:textColor="@color/color_909090_666666"
+            android:textColor="@color/color_BCBCBC_666666"
             android:textSize="12dp"
             tools:visibility="visible" />
 
@@ -293,7 +292,7 @@
             android:paddingBottom="20dp"
             android:text="@string/btm_navigation_copyright"
             android:textAllCaps="true"
-            android:textColor="@color/color_7F7F7F_999999"
+            android:textColor="@color/color_8F8F8F_999999"
             android:textSize="@dimen/textSize12sp" />
     </LinearLayout>
 
@@ -302,6 +301,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@color/color_242527_F1F7FE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ll_pagcor_container">
 
