--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -86,6 +86,13 @@
     <color name="color_cccccc_333333">@color/color_cccccc</color>
     <color name="color_212121_ffffff">@color/color_212121</color>
     <color name="color_b4b4b4_848b9f">@color/color_b4b4b4</color>
+    <color name="color_317FFF_333333">@color/color_317FFF</color>
+    <color name="color_999999_999999">@color/color_999999</color>
+    <color name="color_8F8F8F_999999">@color/color_8F8F8F</color>
+    <color name="color_3b3b3b_e6e6e6">@color/color_3b3b3b</color>
+    <color name="color_666666_999999">@color/color_666666</color>
+    <color name="color_212223_F1F7FE">@color/color_212223</color>
+    <color name="color_242527_F1F7FE">@color/color_242527</color>
 
 
     <color name="color_FFFFFF_DE000000">@color/color_FFFFFF</color>
