--- a/app/src/main/res/layout/button_odd_detail_publicity.xml
+++ b/app/src/main/res/layout/button_odd_detail_publicity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/button_odd_detail"
     android:layout_width="match_parent"
@@ -22,46 +23,82 @@
             android:orientation="horizontal"
             android:showDividers="middle">
 
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:maxLines="1"
-                android:paddingHorizontal="1dp"
-                android:textColor="@color/selector_button_odd_top_text2"
-                android:textSize="@dimen/textSize14sp"
-                tools:text="1"
-                tools:textColor="@color/color_7F7F7F_999999" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_spread"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:maxLines="1"
-                android:paddingHorizontal="1dp"
-                android:textColor="@color/selector_button_odd_top_text"
-                android:textSize="@dimen/textSize14sp"
-                tools:text="-0/0.5"
-                tools:textColor="@color/color_F75452_b73a20" />
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:paddingHorizontal="1dp"
+                    android:textColor="@color/selector_button_odd_top_text2"
+                    android:textSize="@dimen/textSize14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/tv_spread"
+                    app:layout_constraintHorizontal_chainStyle="spread_inside"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="1"
+                    tools:textColor="@color/color_7F7F7F_999999"
+                    tools:visibility="visible" />
 
-            <TextView
-                android:id="@+id/tv_odds"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:paddingHorizontal="1dp"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:textColor="@color/selector_button_odd_bottom_text_publicity"
-                android:textSize="@dimen/textSize14sp"
-                android:textStyle="bold"
-                tools:text="1.067" />
+                <TextView
+                    android:id="@+id/tv_spread"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:paddingHorizontal="1dp"
+                    android:textColor="@color/selector_button_odd_top_text"
+                    android:textSize="@dimen/textSize14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/oddBlock"
+                    app:layout_constraintStart_toEndOf="@id/tv_name"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="-0/0.5"
+                    tools:textColor="@color/color_F75452_b73a20" />
+
+                <LinearLayout
+                    android:id="@+id/oddBlock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:gravity="center_vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tv_spread"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/tv_odds"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:paddingHorizontal="1dp"
+                        android:textColor="@color/selector_button_odd_bottom_text_publicity"
+                        android:textSize="@dimen/textSize14sp"
+                        android:textStyle="bold"
+                        tools:text="1.067" />
+
+                    <ImageView
+                        android:id="@+id/ivOddsArrow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="2dp"
+                        android:visibility="gone"
+                        tools:src="@drawable/ic_arrow_up"
+                        tools:visibility="visible" />
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
 
@@ -83,9 +120,9 @@
         android:layout_height="match_parent"
         android:background="@drawable/bg_radius_4_button_odds_lock"
         android:gravity="center"
-        android:textSize="@dimen/textSize12sp"
-        android:textColor="@color/color_7F7F7F_999999"
         android:text="@string/unknown_data"
+        android:textColor="@color/color_7F7F7F_999999"
+        android:textSize="@dimen/textSize12sp"
         android:visibility="gone" />
 
 </FrameLayout>
