--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -115,13 +115,15 @@
 
                 <TextView
                     android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin_8"
                     android:layout_marginTop="@dimen/margin_8"
                     android:layout_marginBottom="@dimen/margin_9"
                     android:textColor="@color/color_c8c8c8_103861"
                     android:textSize="@dimen/textSize13sp"
-                    app:layout_constraintStart_toStartOf="@+id/ivSportLogo"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/odds_content_container"
                     app:layout_constraintBottom_toTopOf="@+id/tv_match"
                     tools:text="让球" />
