--- a/app/src/main/res/layout/activity_money_recharge.xml
+++ b/app/src/main/res/layout/activity_money_recharge.xml
@@ -99,11 +99,9 @@
             <org.cxct.sportlottery.ui.common.ServiceFloatingButton
                 android:id="@+id/btn_floating_service"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginBottom="14dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                android:layout_height="match_parent"
+                android:paddingHorizontal="10dp"
+                android:paddingVertical="14dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
