--- a/app/src/main/res/layout/content_verify_identity_kyc_service.xml
+++ b/app/src/main/res/layout/content_verify_identity_kyc_service.xml
@@ -6,15 +6,20 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="14dp">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <org.cxct.sportlottery.widget.highLightTextView.HighlightTextView
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:gravity="center"
         android:text="@string/kyc_contact_service"
         android:textColor="@color/color_BBBBBB_333333"
         android:textSize="@dimen/textSize12sp"
+        app:highlightColor="@color/transparent"
+        app:highlightRadius="0dp"
+        app:highlightText="@string/kyc_contact_service_hilight"
+        app:highlightTextColor="@color/color_FF9143"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="遇到问题? 请联系在线客服" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
