--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -78,6 +78,14 @@
                     app:cvInputType="number"
                     app:cvTitle="@string/withdraw_amount" />
 
+                <TextView
+                    android:id="@+id/tv_withdraw_rate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="@string/withdraw_handling_fee_hint"
+                    android:textColor="@color/color_E44438_e44438"
+                    android:textSize="@dimen/textSize12sp" />
+
                 <!-- 扣除金额 -->
                 <TextView
                     android:id="@+id/tv_commission_title"
