--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,7 +61,8 @@
     <color name="color_FAFAFA">#FAFAFA</color>
     <color name="color_D2D2D7">#d2d2d7</color>
     <color name="color_1A1A1A">#1A1A1A</color>
-    <color name="color_404348">#404348</color>
+    <color name="color_F0F5FA">#F0F5FA</color>
+    <color name="color_404348">#404348</color>#
     <color name="color_939393">#939393</color>
     <color name="color_EAF4FE">#EAF4FE</color>
     <color name="color_202020">#202020</color>
@@ -246,14 +247,14 @@
     <!-- ========== color guideline ========== -->
     <color name="colorBackground">@color/color_141414_F3F4F5</color>
 
-<!--    <color name="colorBlueLight">#1463CF</color>-->
-<!--    <color name="colorBlue">#0760D4</color>-->
+    <!--    <color name="colorBlueLight">#1463CF</color>-->
+    <!--    <color name="colorBlue">#0760D4</color>-->
     <color name="colorBlue5">#0066D1</color>
     <color name="colorBlue6">#0079FA</color>
     <!--    <color name="colorBlueDark">#1F4780</color>-->
-<!--    <color name="colorSilverBlue">#A9BEDF</color>-->
+    <!--    <color name="colorSilverBlue">#A9BEDF</color>-->
 
-<!--    <color name="colorOrangeLight">#FF9200</color>-->
+    <!--    <color name="colorOrangeLight">#FF9200</color>-->
     <color name="colorOrange">#FF8000</color>
     <color name="colorOrange2">#ff9e3c</color>
     <color name="colorOrange3">#FFAF5C</color>
@@ -261,54 +262,54 @@
     <color name="colorOrange5">#F56E00</color>
 
     <color name="colorRedLight">#e7837c</color>
-<!--    <color name="colorRed">#E44438</color>-->
-<!--    <color name="colorRedDark">#B73A20</color>-->
-<!--    <color name="colorRedPersian">#CE3636</color>-->
+    <!--    <color name="colorRed">#E44438</color>-->
+    <!--    <color name="colorRedDark">#B73A20</color>-->
+    <!--    <color name="colorRedPersian">#CE3636</color>-->
 
     <color name="colorGreenLight">#08ab75</color>
-<!--    <color name="colorGreen">#08DC6E</color>-->
+    <!--    <color name="colorGreen">#08DC6E</color>-->
     <color name="colorGreenSea">#08AB74</color>
-<!--    <color name="colorGreenKeppel">#3DB893</color>-->
+    <!--    <color name="colorGreenKeppel">#3DB893</color>-->
 
-<!--    <color name="white">#FFFFFF</color>-->
-<!--    <color name="colorWhite">#FCFCFC</color>-->
-<!--    <color name="colorWhite1">#F3F4F5</color>-->
-<!--    <color name="colorWhite2">#F2F2F2</color>-->
-<!--    <color name="colorWhite3">#EDF4FF</color>-->
-<!--    <color name="colorWhite4">#EDEDED</color>-->
-<!--    <color name="colorWhite5">#EBEBEB</color>-->
+    <!--    <color name="white">#FFFFFF</color>-->
+    <!--    <color name="colorWhite">#FCFCFC</color>-->
+    <!--    <color name="colorWhite1">#F3F4F5</color>-->
+    <!--    <color name="colorWhite2">#F2F2F2</color>-->
+    <!--    <color name="colorWhite3">#EDF4FF</color>-->
+    <!--    <color name="colorWhite4">#EDEDED</color>-->
+    <!--    <color name="colorWhite5">#EBEBEB</color>-->
     <!--根據需求，大底色調整為 #EEEFF0-->
-<!--    <color name="colorWhite6">#EEEFF0</color>-->
-<!--    <color name="colorWhite7">#DFEAF8</color>-->
-<!--    <color name="colorWhite8">#E6E6E6</color>-->
-<!--    <color name="colorWhite9">#F3F3F3</color>-->
+    <!--    <color name="colorWhite6">#EEEFF0</color>-->
+    <!--    <color name="colorWhite7">#DFEAF8</color>-->
+    <!--    <color name="colorWhite8">#E6E6E6</color>-->
+    <!--    <color name="colorWhite9">#F3F3F3</color>-->
 
 
     <!--    <color name="colorSilverLight">#CCCCCC</color>-->
-<!--    <color name="colorSilver">#BCBCBC</color>-->
-<!--    <color name="colorSilver2">#DCDCDC</color>-->
-<!--    <color name="colorSilver3">#efeff4</color>-->
-<!--    <color name="colorSilverDirk">#B4B4B4</color>-->
+    <!--    <color name="colorSilver">#BCBCBC</color>-->
+    <!--    <color name="colorSilver2">#DCDCDC</color>-->
+    <!--    <color name="colorSilver3">#efeff4</color>-->
+    <!--    <color name="colorSilverDirk">#B4B4B4</color>-->
 
-<!--    <color name="colorGrayLight">#999999</color>-->
-<!--    <color name="colorGrayLight2">#E4E4E4</color>-->
-<!--    <color name="colorGrayLight3">#EFEFEF</color>-->
-<!--    <color name="colorGray">#666666</color> &lt;!&ndash;106 106 106&ndash;&gt;-->
-<!--    <color name="colorGrayDark">#404040</color>-->
-<!--    <color name="colorGrayDark2">#444444</color>-->
-<!--    <color name="colorGrayDark3">#E1E1E1</color>-->
-<!--    <color name="colorGrayGallery">#EEEEEE</color>-->
-<!--    <color name="colorGrayText">#888888</color>-->
-<!--    <color name="colorBlackLight">#333333</color>-->
-<!--    <color name="colorBlack">#000000</color>-->
-<!--    <color name="colorEEEFF0">#EEEFF0</color>-->
+    <!--    <color name="colorGrayLight">#999999</color>-->
+    <!--    <color name="colorGrayLight2">#E4E4E4</color>-->
+    <!--    <color name="colorGrayLight3">#EFEFEF</color>-->
+    <!--    <color name="colorGray">#666666</color> &lt;!&ndash;106 106 106&ndash;&gt;-->
+    <!--    <color name="colorGrayDark">#404040</color>-->
+    <!--    <color name="colorGrayDark2">#444444</color>-->
+    <!--    <color name="colorGrayDark3">#E1E1E1</color>-->
+    <!--    <color name="colorGrayGallery">#EEEEEE</color>-->
+    <!--    <color name="colorGrayText">#888888</color>-->
+    <!--    <color name="colorBlackLight">#333333</color>-->
+    <!--    <color name="colorBlack">#000000</color>-->
+    <!--    <color name="colorEEEFF0">#EEEFF0</color>-->
 
 
     <!-- //== 以下不在 v3 color guideline 定義內，但有使用==//-->
-<!--    <color name="blueLight">#a9bedf</color>-->
+    <!--    <color name="blueLight">#a9bedf</color>-->
     <color name="blueDeep">#35485C</color>
 
-<!--    <color name="colorBronze">#CB7C2E</color>-->
+    <!--    <color name="colorBronze">#CB7C2E</color>-->
 
     <color name="transparent">#00000000</color>
     <color name="transparent_black_0">#00000000</color>
@@ -319,10 +320,10 @@
 
     <color name="transparent_white_70">#B3FFFFFF</color>
 
-<!--    <color name="color_fff3f3f3">#fff3f3f3</color>-->
-<!--    <color name="color_ffededed">#ffededed</color>-->
-<!--    <color name="color_999999">#999999</color>-->
-<!--    <color name="color_AAAAAA">#AAAAAA</color>-->
+    <!--    <color name="color_fff3f3f3">#fff3f3f3</color>-->
+    <!--    <color name="color_ffededed">#ffededed</color>-->
+    <!--    <color name="color_999999">#999999</color>-->
+    <!--    <color name="color_AAAAAA">#AAAAAA</color>-->
     <color name="color_FDFDFD">#FDFDFD</color>
     <color name="color_F08E29">#ffF08E29</color>
     <color name="color_060F20">#060F20</color>
@@ -339,6 +340,7 @@
     <color name="color_FFFDFE">#FFFDFE</color>
     <color name="color_345577">#345577</color>
     <!-- ======================================= -->
-
+   <color name="color_A7B2C">#A7B2C4</color>
+    <color name="color_535D76">#535D76</color>
 
 </resources>
