--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,7 +15,7 @@
     14.15 => 14
     16    => 16
     -->
-    <dimen name="textSize13sp">12dp</dimen>
+    <dimen name="textSize13sp">13dp</dimen>
     <dimen name="textSize14sp">14dp</dimen>
     <dimen name="textSize15sp">14dp</dimen>
     <dimen name="textSize16sp">16dp</dimen>
@@ -48,8 +48,10 @@
     <dimen name="margin_24">24dp</dimen>
     <dimen name="margin_25">25dp</dimen>
     <dimen name="margin_26">26dp</dimen>
+    <dimen name="margin_27">27dp</dimen>
     <dimen name="margin_28">28dp</dimen>
     <dimen name="margin_30">30dp</dimen>
+    <dimen name="margin_31">31dp</dimen>
     <dimen name="margin_34">34dp</dimen>
     <dimen name="margin_36">36dp</dimen>
     <dimen name="margin_40">40dp</dimen>
